--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <!-- Add a ListView for the menu options -->
+    <ListView 
+    	android:id="@+id/main_list_view"
+    	android:layout_width="wrap_content"
+    	android:layout_height="wrap_content">
+   	</ListView>
 
 </RelativeLayout>
