--- a/res/menu/my_routes.xml
+++ b/res/menu/my_routes.xml
@@ -1,9 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
+<!-- Menu item for routes -->
+    <item android:id="@+id/action_add_route"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="@string/add_route"
+        android:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
 </menu>
